<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2ft_control</name>
  <version>1.0.0</version>
  <description>Package to control an OnRobot RG2-FT gripper</description>
  <maintainer email="itchuang@ucdavis.edu">Ian Chuang</maintainer>
  <author email="itchuang@ucdavis.edu">Ian Chuang</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>onrobot_rg2ft_msgs</depend>
  <depend>std_srvs</depend>
</package>